Fixes for other languages