@@ -1,108 +1,152 @@
-import com.azure.ai.projects.*;
+import com.azure.ai.projects.AIProjectClient;
+import com.azure.ai.projects.AIProjectClientBuilder;
 import com.azure.ai.projects.models.*;
 import com.azure.identity.DefaultAzureCredentialBuilder;
-import com.google.gson.*;
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 import io.github.cdimascio.dotenv.Dotenv;
+
 import java.io.*;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 
 public class Evaluate {
-    private static AIProjectClient projectClient;
-    private static Dotenv dotenv;
-    
-    static {
-        dotenv = Dotenv.configure().ignoreIfMissing().load();
+    public static void main(String[] args) throws Exception {
+        Dotenv dotenv = Dotenv.configure().ignoreIfMissing().load();
+        
         String projectEndpoint = dotenv.get("PROJECT_ENDPOINT");
-        projectClient = new AIProjectClientBuilder()
+        String modelDeploymentName = dotenv.get("MODEL_DEPLOYMENT_NAME");
+        String sharepointResourceName = dotenv.get("SHAREPOINT_RESOURCE_NAME");
+        
+        AIProjectClient client = new AIProjectClientBuilder()
             .endpoint(projectEndpoint)
             .credential(new DefaultAzureCredentialBuilder().build())
             .buildClient();
-    }
-    
-    static class EvalResult {
-        String question;
-        String response;
-        String status;
-        int responseLength;
-        boolean passed;
-    }
-    
-    public static void main(String[] args) throws Exception {
-        System.out.println("🧪 Modern Workplace Assistant - Evaluation");
-        System.out.println("=".repeat(50));
         
-        String modelDeploymentName = dotenv.get("MODEL_DEPLOYMENT_NAME");
-        String mcpServerUrl = dotenv.get("MCP_SERVER_URL");
+        System.out.println("🧪 Modern Workplace Assistant Evaluation\n");
         
-        System.out.println("🤖 Creating Modern Workplace Assistant...");
-        Map<String, Object> mcpTool = new HashMap<>();
-        mcpTool.put("type", "mcp");
-        mcpTool.put("server_label", "microsoft_learn");
-        mcpTool.put("server_url", mcpServerUrl);
-        mcpTool.put("require_approval", "never");
+        List<ToolDefinition> tools = new ArrayList<>();
         
-        Agent agent = projectClient.createAgent(
-            modelDeploymentName,
-            "Modern Workplace Assistant",
-            "You are a helpful assistant with access to Microsoft Learn documentation.",
-            List.of(mcpTool)
-        );
-        System.out.println("✅ Agent created successfully: " + agent.getId());
-        
-        // Load questions
-        List<String> questions = new ArrayList<>();
-        Path questionsPath = Paths.get("questions.jsonl");
-        for (String line : Files.readAllLines(questionsPath)) {
-            JsonObject obj = JsonParser.parseString(line).getAsJsonObject();
-            questions.add(obj.get("question").getAsString());
+        if (sharepointResourceName != null && !sharepointResourceName.isEmpty()) {
+            try {
+                ConnectionResponse connection = client.getConnection(sharepointResourceName);
+                if (connection != null) {
+                    tools.add(new SharePointToolDefinition(connection.getId()));
+                    System.out.println("✅ SharePoint configured for evaluation\n");
+                }
+            } catch (Exception e) {
+                System.out.println("⚠️  SharePoint unavailable: " + e.getMessage() + "\n");
+            }
         }
         
-        System.out.println("🧪 Running evaluation with " + questions.size() + " test questions...");
+        String instructions = "You are a Modern Workplace Assistant for Contoso Corporation. " +
+            "Answer questions using available tools and provide specific, detailed responses.";
         
-        List<EvalResult> results = new ArrayList<>();
+        Agent agent = client.createAgent(
+            modelDeploymentName,
+            new AgentCreationOptions()
+                .setName("Evaluation Agent")
+                .setInstructions(instructions)
+                .setTools(tools)
+        );
+        
+        List<Map<String, String>> questions = new ArrayList<>();
+        Gson gson = new Gson();
+        
+        try (BufferedReader br = Files.newBufferedReader(Paths.get("questions.jsonl"))) {
+            String line;
+            while ((line = br.readLine()) != null) {
+                @SuppressWarnings("unchecked")
+                Map<String, String> q = gson.fromJson(line, Map.class);
+                questions.add(q);
+            }
+        }
+        
+        List<Map<String, Object>> results = new ArrayList<>();
+        
+        System.out.println("Running " + questions.size() + " evaluation questions...\n");
+        
         for (int i = 0; i < questions.size(); i++) {
-            String question = questions.get(i);
-            System.out.println("📝 Question " + (i + 1) + "/" + questions.size() + ": " + question);
+            Map<String, String> q = questions.get(i);
+            String question = q.get("question");
+            String[] expectedKeywords = q.containsKey("expected_keywords") ? 
+                q.get("expected_keywords").split(",") : new String[0];
             
-            AgentThread thread = projectClient.createThread();
-            projectClient.createMessage(thread.getId(), "user", question);
-            ThreadRun run = projectClient.createRun(thread.getId(), agent.getId());
+            System.out.println("Question " + (i + 1) + "/" + questions.size() + ": " + question);
             
-            while ("queued".equals(run.getStatus()) || "in_progress".equals(run.getStatus())) {
-                TimeUnit.MILLISECONDS.sleep(500);
-                run = projectClient.getRun(thread.getId(), run.getId());
+            AgentThread thread = client.createThread();
+            client.createMessage(thread.getId(), MessageRole.USER, question);
+            
+            ThreadRun run = client.createRun(thread.getId(), agent.getId());
+            
+            while (run.getStatus() == RunStatus.QUEUED || run.getStatus() == RunStatus.IN_PROGRESS) {
+                TimeUnit.MILLISECONDS.sleep(1000);
+                run = client.getRun(thread.getId(), run.getId());
             }
             
-            List<ThreadMessage> messages = projectClient.listMessages(thread.getId());
-            StringBuilder response = new StringBuilder();
-            for (ThreadMessage msg : messages) {
-                if ("assistant".equals(msg.getRole())) {
-                    for (MessageContent content : msg.getContent()) {
-                        if (content instanceof MessageTextContent) {
-                            response.append(((MessageTextContent) content).getText());
+            String response = "";
+            if (run.getStatus() == RunStatus.COMPLETED) {
+                List<ThreadMessage> messages = client.listMessages(thread.getId(), 
+                    new ListMessagesOptions().setOrder(ListSortOrder.DESCENDING));
+                
+                for (ThreadMessage message : messages) {
+                    if (message.getRole() == MessageRole.ASSISTANT) {
+                        for (MessageContent content : message.getContentItems()) {
+                            if (content instanceof MessageTextContent) {
+                                response = ((MessageTextContent) content).getText();
+                                break;
+                            }
                         }
+                        break;
                     }
                 }
             }
             
-            EvalResult result = new EvalResult();
-            result.question = question;
-            result.response = response.toString();
-            result.status = run.getStatus();
-            result.responseLength = response.length();
-            result.passed = "completed".equals(run.getStatus()) && response.length() > 50;
+            boolean passed = response.length() > 50;
+            if (expectedKeywords.length > 0) {
+                boolean hasKeyword = false;
+                for (String keyword : expectedKeywords) {
+                    if (response.toLowerCase().contains(keyword.trim().toLowerCase())) {
+                        hasKeyword = true;
+                        break;
+                    }
+                }
+                passed = passed && hasKeyword;
+            }
+            
+            System.out.println("   Status: " + (passed ? "✅ PASS" : "❌ FAIL"));
+            System.out.println("   Response length: " + response.length() + " characters\n");
+            
+            Map<String, Object> result = new HashMap<>();
+            result.put("question", question);
+            result.put("response", response);
+            result.put("passed", passed);
+            result.put("response_length", response.length());
             results.add(result);
             
-            System.out.println("✅ Response length: " + response.length() + " chars (Status: " + run.getStatus() + ")");
+            client.deleteThread(thread.getId());
         }
         
-        long passedCount = results.stream().filter(r -> r.passed).count();
-        System.out.println("\n📊 Evaluation Results: " + passedCount + "/" + results.size() + " questions passed");
+        client.deleteAgent(agent.getId());
         
-        Gson gson = new GsonBuilder().setPrettyPrinting().create();
-        Files.writeString(Paths.get("evaluation_results.json"), gson.toJson(results));
-        System.out.println("💾 Results saved to evaluation_results.json");
+        long passedCount = results.stream().filter(r -> (Boolean) r.get("passed")).count();
+        long failedCount = results.size() - passedCount;
+        
+        Map<String, Object> summary = new HashMap<>();
+        summary.put("total_questions", questions.size());
+        summary.put("passed", passedCount);
+        summary.put("failed", failedCount);
+        summary.put("results", results);
+        
+        String json = new GsonBuilder().setPrettyPrinting().create().toJson(summary);
+        Files.write(Paths.get("evaluation_results.json"), json.getBytes());
+        
+        System.out.println("📊 Evaluation Complete:");
+        System.out.println("   Total: " + questions.size());
+        System.out.println("   Passed: " + passedCount);
+        System.out.println("   Failed: " + failedCount);
+        System.out.println("\n📄 Results saved to evaluation_results.json");
     }
 }
